Bug 134901 - Time left is negative (has "-") and size is 0K for ftp downloads r=dougt, sr=darin, a=rjesup